<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="prefcat_security"
        android:persistent="false"
        android:title="@string/prefcat_title_security">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefkey_pin_enabled"
            android:summary="@string/preference_summary_pin"
            android:title="@string/preference_title_pin"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefkey_flag_secure_enabled"
            android:summary="@string/preference_summary_flag_secure"
            android:title="@string/preference_title_flag_secure"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="prefcat_reminder"
        android:persistent="false"
        android:title="@string/prefcat_title_reminder">

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:dialogTitle="@string/dialog_reminder_days_title"
            android:entries="@array/weekdays"
            android:entryValues="@array/weekdays_values"
            android:key="@string/prefkey_reminder_days"
            android:title="@string/preference_title_reminder_days"/>

        <Preference
            android:key="@string/prefkey_reminder_time"
            android:title="@string/preference_title_reminder_time"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="prefcat_substitution"
        android:persistent="false"
        android:title="@string/prefcat_title_substitution">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefkey_substitution_enabled"
            android:summary="@string/preference_summary_substitution"
            android:title="@string/preference_title_enabled"/>
        <Preference
            android:key="@string/prefkey_substitution_table"
            android:persistent="false"
            android:title="@string/preference_title_substitution_table"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/prefkey_backup"
        android:persistent="false"
        android:title="@string/preference_title_backup">

        <Preference
            android:key="@string/prefkey_backup_dropbox"
            android:persistent="false"
            android:summary="@string/preference_summary_backup_dropbox"
            android:title="@string/preference_title_backup_dropbox"/>
        <Preference
            android:key="@string/prefkey_backup_plain_text"
            android:persistent="false"
            android:summary="@string/preference_summary_backup_plain_text"
            android:title="@string/preference_title_backup_plain_text"/>
        <Preference
            android:key="@string/prefkey_backup_json"
            android:persistent="false"
            android:summary="@string/preference_summary_backup_json"
            android:title="@string/preference_title_backup_json"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/prefkey_restore"
        android:persistent="false"
        android:title="@string/preference_title_restore">

        <Preference
            android:key="@string/prefkey_restore_dropbox"
            android:persistent="false"
            android:summary="@string/preference_summary_restore_dropbox"
            android:title="@string/preference_title_restore_dropbox"/>
        <Preference
            android:key="@string/prefkey_restore_json"
            android:persistent="false"
            android:summary="@string/preference_summary_restore_json"
            android:title="@string/preference_title_restore_json"/>
    </PreferenceCategory>
</PreferenceScreen>
